# SFMLTemplateProject

./: CMakeLists.txt
src/: Main.cpp  RandomUtils.cpp  RandomUtils.h  RectUtils.cpp  Resources.cpp  Resources.h  Timer.cpp  Timer.h
src/Core/: GameObject.h  RectUtils.cpp  RectUtils.h
